# DjangoStudy

./: README.md  docker-compose.yml
backend/: db.sqlite3  dockerfile  pyproject.toml  requirements.txt
backend/config/: settings.py
backend/houses/: admin.py  models.py
backend/houses/migrations/: 0001_initial.py  0002_house_owner.py  0002_house_pet_allowed.py  0003_alter_house_name.py
backend/users/: admin.py  models.py
backend/users/migrations/: 0001_initial.py  0002_user_avatar_user_currency_user_gender_user_language.py
