[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "AiSamdasu",email = "kimtaekyu1204@naver.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.3,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
