[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["AiSamdasu <kimtaekyu1204@naver.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13"  # ✅ 반드시 여기에 위치!
django = ">=5.2.3,<6.0.0"
pillow = "^11.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
